<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_insert">Insert</string>
    <string name="action_read">Read</string>
    <string name="category_overview">Overview</string>
    <string name="category_price">Price in €</string>
    <string name="category_quantity">Quantity</string>
    <string name="hint_product_name">Book name</string>
    <string name="hint_supplier_name">Supplier name</string>
    <string name="hint_supplier_phone_number">Supplier phone number</string>
    <string name="hint_default_price">0,00</string>
    <string name="unit_price_currency">€</string>
    <string name="default_quantity">0</string>
    <string name="button_increase">+</string>
    <string name="button_decrease">-</string>
    <string name="editor_activity_title_new_book">Add a book</string>
    <string name="editor_activity_title_edit_book">Edit book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_phone">Phone the supplier</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="empty_view_title_text">There is no data yet</string>
    <string name="empty_view_subtitle_text">Let us add a book to the bookshelf</string>
    <string name="action_delete_all_entries">Delete all books</string>
</resources>
